fix audited defects and feed behavior